k8s/istio/permissive-enable.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "example-policy"
  namespace: "default"
spec:
  mtls:
    mode: PERMISSIVE
