k8s/istio/gateway-simple.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: golang-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: golang-app-service
spec:
  hosts:
  - "*"
  gateways:
  - golang-gateway #golang_gateway
  http:
  - match:
    - uri:
        exact: /health
    - uri:
        exact: /webhook
    route:
    - destination:
        host: golang-app-service #service name
