k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: golang-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: golang-app
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: golang-app
spec:
  hosts:
  - "*"
  gateways:
  - golang-gateway
  http:
  - match:
    - uri:
        exact: /health
    - uri:
        exact: /webhook
    route:
    - destination:
        host: golang-app
        port:
          number: 9000
